add DataInitializer